--- a/libs/barista-components/filter-field/src/filter-field.html
+++ b/libs/barista-components/filter-field/src/filter-field.html
@@ -15,7 +15,7 @@
   <dt-filter-field-tag
     *ngFor="let tagData of _prefixTagData"
     [data]="tagData"
-    [_filterFieldDisabled]="disabled"
+    [_temporarilyDisabled]="disabled || _isInFilterEditMode"
     (remove)="_handleTagRemove($event)"
     (edit)="_handleTagEdit($event)"
   ></dt-filter-field-tag>
@@ -117,7 +117,7 @@
   <dt-filter-field-tag
     *ngFor="let tagData of _suffixTagData"
     [data]="tagData"
-    [_filterFieldDisabled]="disabled"
+    [_temporarilyDisabled]="disabled || _isInFilterEditMode"
     (remove)="_handleTagRemove($event)"
     (edit)="_handleTagEdit($event)"
   ></dt-filter-field-tag>
