fix(filter-field): Uses seperate disabled member, disabling the current tags' edit- and delete button in edit mode. This is visualized with a not-allowed cursor.

--- a/libs/barista-components/filter-field/src/filter-field-tag/filter-field-tag.html
+++ b/libs/barista-components/filter-field/src/filter-field-tag/filter-field-tag.html
@@ -33,11 +33,11 @@
   </button>
 </div>
 <button
-  *ngIf="!(_temporarilyDisabled || disabled) && deletable"
+  *ngIf="deletable"
   dt-icon-button
   variant="nested"
   class="dt-filter-field-tag-button"
-  [disabled]="_temporarilyDisabled || !deletable"
+  [disabled]="_temporarilyDisabled || disabled"
   (click)="_handleRemove($event)"
   (keyup)="_handleKeyUp($event)"
   #deleteButton
